--- a/eclair-node/pom.xml
+++ b/eclair-node/pom.xml
@@ -20,11 +20,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>fr.acinq.eclair</groupId>
-        <artifactId>eclair_2.11</artifactId>
-        <version>0.3.8-android-phoenix-SNAPSHOT</version>
+        <artifactId>eclair_2.12</artifactId>
+        <version>0.3.8-android-phoenix-scala2.12-SNAPSHOT</version>
     </parent>
 
-    <artifactId>eclair-node_2.11</artifactId>
+    <artifactId>eclair-node_2.12</artifactId>
     <packaging>jar</packaging>
 
     <name>eclair-node</name>
@@ -95,45 +95,45 @@
         <!-- http server -->
         <dependency>
             <groupId>io.spray</groupId>
-            <artifactId>spray-can_${scala.version.short}</artifactId>
+            <artifactId>spray-can_2.11</artifactId>
             <version>1.3.3</version>
         </dependency>
         <dependency>
             <groupId>io.spray</groupId>
-            <artifactId>spray-http_${scala.version.short}</artifactId>
+            <artifactId>spray-http_2.11</artifactId>
             <version>1.3.3</version>
         </dependency>
         <dependency>
             <groupId>io.spray</groupId>
-            <artifactId>spray-httpx_${scala.version.short}</artifactId>
+            <artifactId>spray-httpx_2.11</artifactId>
             <version>1.3.3</version>
         </dependency>
         <dependency>
             <groupId>io.spray</groupId>
-            <artifactId>spray-routing-shapeless2_${scala.version.short}</artifactId>
+            <artifactId>spray-routing-shapeless2_2.11</artifactId>
             <version>1.3.3</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.chuusai</groupId>
-                    <artifactId>shapeless_2.11</artifactId>
+                    <artifactId>shapeless_2.12</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
         <dependency>
             <groupId>io.spray</groupId>
-            <artifactId>spray-util_${scala.version.short}</artifactId>
+            <artifactId>spray-util_2.11</artifactId>
             <version>1.3.3</version>
         </dependency>
         <!-- test dependencies -->
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-scala-scalatest_2.11</artifactId>
+            <artifactId>mockito-scala-scalatest_2.12</artifactId>
             <version>1.4.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.spray</groupId>
-            <artifactId>spray-testkit_${scala.version.short}</artifactId>
+            <artifactId>spray-testkit_2.11</artifactId>
             <version>1.3.3</version>
             <scope>test</scope>
         </dependency>
