--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.acinq.eclair</groupId>
-    <artifactId>eclair_2.11</artifactId>
-    <version>0.3.8-android-phoenix-SNAPSHOT</version>
+    <artifactId>eclair_2.12</artifactId>
+    <version>0.3.8-android-phoenix-scala2.12-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -63,12 +63,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
-        <scala.version>2.11.12</scala.version>
-        <scala.version.short>2.11</scala.version.short>
-	    <akka.version>2.3.14</akka.version>
+        <scala.version>2.12.8</scala.version>
+        <scala.version.short>2.12</scala.version.short>
+	    <akka.version>2.5.21</akka.version>
 	    <akka.http.version>10.0.11</akka.http.version>
         <sttp.version>1.3.9</sttp.version>
-        <bitcoinlib.version>0.17</bitcoinlib.version>
+        <bitcoinlib.version>0.18-scala2.12-SNAPSHOT</bitcoinlib.version>
         <guava.version>24.0-android</guava.version>
         <kamon.version>2.0.0</kamon.version>
     </properties>
@@ -117,14 +117,14 @@
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>3.4.2</version>
+                <version>4.0.1</version>
                 <configuration>
                     <args combine.children="append">
                         <arg>-deprecation</arg>
                         <arg>-feature</arg>
                         <arg>-language:postfixOps</arg>
                         <arg>-language:implicitConversions</arg>
-                        <arg>-Xfatal-warnings</arg>
+                        <!--arg>-Xfatal-warnings</arg-->
                         <arg>-unchecked</arg>
                         <arg>-Xmax-classfile-name</arg>
                         <arg>140</arg>
