--- a/eclair-core/src/main/resources/reference.conf
+++ b/eclair-core/src/main/resources/reference.conf
@@ -24,14 +24,14 @@ eclair {
 
   bitcoind {
     host = "localhost"
-    rpcport = 8332
-    rpcuser = "foo"
-    rpcpassword = "bar"
+    rpcport = 19688
+    rpcuser = "mue"
+    rpcpassword = "mue"
     zmqblock = "tcp://127.0.0.1:29000"
     zmqtx = "tcp://127.0.0.1:29000"
   }
 
-  min-feerate = 3 // minimum feerate in satoshis per byte
+  min-feerate = 1000 // minimum feerate in satoshis per byte
   smooth-feerate-window = 6 // 1 = no smoothing
   feerate-provider-timeout = 5 seconds // max time we'll wait for answers from a fee provider before we fallback to the next one
 
@@ -62,8 +62,8 @@ eclair {
   sync-whitelist = [] // a list of public keys; if non-empty, we will only do the initial sync with those peers
   channel-flags = 1 // announce channels
 
-  dust-limit-satoshis = 546
-  max-htlc-value-in-flight-msat = 5000000000 // 50 mBTC
+  dust-limit-satoshis = 100000
+  max-htlc-value-in-flight-msat = 50000000000000 // 500 MUE
   htlc-minimum-msat = 1
   max-accepted-htlcs = 30
 
