--- a/eclair-node-gui/pom.xml
+++ b/eclair-node-gui/pom.xml
@@ -102,7 +102,7 @@
                         <configuration>
                             <vendor>ACINQ</vendor>
                             <needShortcut>true</needShortcut>
-                            <appName>Eclair</appName>
+                            <appName>MonetaryUnit Eclair</appName>
                             <nativeReleaseVersion>${project.version}</nativeReleaseVersion>
                             <skipNativeVersionNumberSanitizing>true</skipNativeVersionNumberSanitizing>
                             <nativeOutputDir>${project.build.directory}/jfx/installer</nativeOutputDir>
