--- a/eclair-core/pom.xml
+++ b/eclair-core/pom.xml
@@ -80,7 +80,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <bitcoind.url>https://bitcoincore.org/bin/bitcoin-core-0.19.1/bitcoin-0.19.1-x86_64-linux-gnu.tar.gz</bitcoind.url>
+                <bitcoind.url>https://github.com/muecoin/MUE/releases/download/v2.1.6/mon-2.1.6-x86_64-linux-gnu.tar.gz</bitcoind.url>
                 <bitcoind.md5>c2e41019caab82e6c5cb45f44964f44e</bitcoind.md5>
                 <bitcoind.sha1>efabbb93827fa35d16a8ba73360e5fbf6b86a91c</bitcoind.sha1>
             </properties>
@@ -93,7 +93,7 @@
                 </os>
             </activation>
             <properties>
-                <bitcoind.url>https://bitcoincore.org/bin/bitcoin-core-0.19.1/bitcoin-0.19.1-osx64.tar.gz</bitcoind.url>
+                <bitcoind.url>https://github.com/muecoin/MUE/releases/download/v2.1.6/mon-2.1.6-osx64.tar.gz</bitcoind.url>
                 <bitcoind.md5>6687a2df8b8a167b3afb9e0107deeb7d</bitcoind.md5>
                 <bitcoind.sha1>a02469a77781cd1413df120133be131bd388a997</bitcoind.sha1>
             </properties>
@@ -106,7 +106,7 @@
                 </os>
             </activation>
             <properties>
-                <bitcoind.url>https://bitcoincore.org/bin/bitcoin-core-0.19.1/bitcoin-0.19.1-win64.zip</bitcoind.url>
+                <bitcoind.url>https://github.com/muecoin/MUE/releases/download/v2.1.6/mon-2.1.6-win64.zip</bitcoind.url>
                 <bitcoind.md5>0ef5729d71a8b996b7753f564259cef9</bitcoind.md5>
                 <bitcoind.sha1>13d056bfb26d6d18b656b57ab2ab36dd38fa4043</bitcoind.sha1>
             </properties>
